--- a/reactStarterProject/src/index.css
+++ b/reactStarterProject/src/index.css
@@ -1,3 +1,4 @@
+@import "tailwindcss";
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -35,6 +36,13 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
+
+h2 {
+  font-size: 2.2em;
+  line-height: 1.1;
+}
+
+
 
 button {
   border-radius: 8px;
